<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegistrationActivity"
    >

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcomeregistration"
        android:background="#8AC1B6"
        android:ems="25"
        android:fontFamily="@font/aclonica"
        android:textAlignment="center"
        android:textColor="#062649"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_below="@+id/registrationTextView"
        android:ems="12"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_below="@+id/usernameEditText"
        android:ems="12"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_below="@+id/emailEditText"
        android:ems="12"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
     <Spinner
         android:id="@+id/phoneSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin"
         android:layout_marginLeft="@dimen/default_margin"
         android:layout_marginRight="@dimen/default_margin"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/phoneEditText"
         />
    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_below="@+id/phoneSpinner"
        android:ems="12"
        android:maxLines="3"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/address"
        android:inputType="textMultiLine|textPostalAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_below="@+id/addressEditText"
        android:ems="12"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_below="@+id/passwordEditText"
        android:ems="12"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
        <RadioGroup
            android:id="@+id/genderTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/passwordAgainEditText"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            >
                <RadioButton
                    android:id="@+id/womanGenderRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nő"
                    android:textSize="20sp"/>
                <RadioButton
                    android:id="@+id/manGenderRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Férfi"
                    android:textSize="20sp"/>
                <RadioButton
                    android:id="@+id/anotherGenderRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Egyéb"
                    android:textSize="20sp"/>
        </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/genderTypeGroup"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_centerHorizontal="true"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8AC1B6"
        android:fontFamily="@font/archivo_black"
        android:text="@string/registration"
        android:textColor="#062649"
        android:layout_marginRight="50dp"
        android:onClick="registration"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8AC1B6"
        android:fontFamily="@font/archivo_black"
        android:text="@string/cancel"
        android:textColor="#062649"
        android:onClick="cancel"
        />
    </LinearLayout>

</RelativeLayout>
</ScrollView>